samples/_failures_safe/1761210257_57e713_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed30306e.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_ed30306e.c:152:9: error: expected declaration or statement at end of input
  152 |         }
      |         ^
./samples/SAFE/__tmp_ed30306e.c:152:9: error: expected declaration or statement at end of input
